# house-price-model

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  predict.py  pyproject.toml  requirements-dev.txt  requirements.txt  start_dev.ps1  train.py
cloud/bigquery/: marts_views.sql
cloud/databricks/: 01_bronze_ingest.py  02_silver_clean.py  03_gold_features.py
docs/: architecture.md  experiments.md
notebooks/: 01_exploration.ipynb
notebooks/jupyter/: 01_exploration.ipynb
notebooks/lakehouse/: 00_bootstrap.py  01_bronze_job.py  02_silver_job.py  03_gold_job.py
scripts/: __init__.py  init_schema.py  set_env_azure_db.ps1  set_env_azure_db_example.ps1  show_db_sample.py  start_dev.ps1  test_db_connection.py
scripts/bigquery/: __init__.py  apply_views.py  load_raw_tables.py  sync_bigquery.py
scripts/databricks/: __init__.py  download_feature_store.ps1  run_lakehouse_jobs.py  sync_feature_store.py  sync_repo.py  update_jobs_to_repo.py
scripts/db/: __init__.py  set_env_azure_db.ps1  set_env_local_db.ps1
scripts/lakehouse/: __init__.py  build_bronze.py  build_gold.py  build_silver.py
scripts/warehouse/: __init__.py  export_warehouse_views.py
sql/: schema.sql
sql/migrations/: V1__init.sql  V2__align_legacy_schema.sql  V3__gold_views.sql
src/: __init__.py  data.py  db.py  features.py  lakehouse.py  models.py  nn_models.py  preprocessing.py
terraform/: main.tf  outputs.tf  variables.tf
