# ------------------------------
# pyproject.toml
#
# Minimal-Konfiguration, um das Projekt als installierbares Package
# zu verwenden (Entwicklung via "pip install -e .").
# ------------------------------

[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "house-price-model"
version = "0.1.0"
description = "Kaggle House Prices ML-Projekt (Training, Inferenz, Azure-DB)"
readme = "README.md"
requires-python = ">=3.11"

# Option: Dependencies hier pflegen ODER bei requirements.txt lassen.
dependencies = []

[tool.setuptools]
packages = ["src"]